--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,20 +1,6 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
+  text-align: center;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +8,17 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-logo {
+  height: 20vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-link {
@@ -94,6 +91,7 @@
 }
 
 #payment-status-container {
+  color: black;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -101,6 +99,7 @@
   box-sizing: border-box;
   border-radius: 50px;
   margin: 0 auto;
+  margin-top: 2rem;
   width: 225px;
   height: 48px;
   visibility: hidden;
